--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "apiChecks": 0,
   "lastMinute": true,
   "testingMode": false,
-  "botTestingMode": true,
+  "botTestingMode": false,
   "councilPlus": ["ns leaders", "ns council i", "ns council ii", "ns council iii", "ns ii leaders"],
   "adminUsers": [200676892024504320, 547926928313548801, 547986194055692289],
   "npcChannel": "",
