--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
   "debug": false,
   "blockVerify": true,
   "onReadyRun": false,
-  "romanNumbers": {"0": "0","1": "I","2": "II","3": "III","4": "IV","5": "V"},
+  "rabbitList": ["bunny", "rabbit", "hare"],
+  "romanNumbers": {"0": "0", "1": "I", "2": "II", "3": "III", "4": "IV", "5": "V"},
   "cogNames": ["NPCcog","factioncog", "othercog"],
   "npcImageLinks": ["https://i.imgur.com/sCVrkbF.png", "https://i.imgur.com/JBTo4vA.png"],
   "factionNames": {"NSI":9533,"NSII":11747,"NSIII":12094,"JFK":3241,"CR":16628,"R*":8336,"IBB":2736,"SA":2013,"DA":231,"39thx": 16312,"39th": 19,"MnC": 7835,"FTW": 11581},
