Value of npcReady wasn't being reset.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "apiLimit": 80,
-  "botTestingMode": true,
+  "botTestingMode": false,
   "councilPlus": ["ns leaders", "ns council i", "ns council ii", "ns council iii", "ns ii leaders"],
   "adminUsers": [200676892024504320, 547926928313548801, 547986194055692289],
   "npcChannel": "",
