--- a/config.json
+++ b/config.json
@@ -11,5 +11,8 @@
   "npcImageLinks": {"Duke": "https://profileimages.torn.com/4d661456-1798-ad32-4.png", "Leslie": "https://profileimages.torn.com/4d661456-17bc-2098-15.png"},
   "factionNames": {"NSI":9533,"NSII":11747,"NSIII":12094,"JFK":3241,"CR":16628,"R*":8336,"IBB":2736,"SA":2013,"DA":231,"39thx": 16312,"39th": 19,"MnC": 7835,"FTW": 11581},
   "bullyList": ["Hcom", "jukka", "gratify", "ZeroTwo", "Johnny_G", "FidelCashFlow", "STEVE_HOLT", "BOOMER_HOLT", "Rhino", "Rhinko", "LTJELLOMAN", "Bones", "Roxy", "Everyone", "ttyper", "Vicarious", "Stretch", "Karen", "Itself"],
-  "lottoFactions": [9533, 11747, 12094]
+  "lottoFactions": [9533, 11747, 12094],
+  "tessa": ["hunting dog", "watchdog", "brown"],
+  "bestBoy": ["golden retriever", "golden"],
+  "dogs": ["dog", "pet", "canine"]
 }
